--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,48 @@
 @font-face {
+    font-family: 'raleway';
+    src: url('../fonts/raleway/raleway-regular.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/raleway/raleway-bold.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/raleway/raleway-extra-bold.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/raleway/raleway-light.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'raleway';
+    src: url('../fonts/raleway/raleway-semi-bold.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
     font-family: 'montserrat';
     src: url('../fonts/montserrat/montserrat-light.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'roboto';
+    src: url('../fonts/roboto/roboto-regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
@@ -8,6 +50,7 @@
 * {
     margin: 0;
     padding: 0;
+    /* outline: 1px solid #000;*/
     box-sizing: border-box;
 }
 
@@ -39,6 +82,29 @@ body li {
     height: 3px;
     opacity: 0.7;
     background-color: #cacaca;
+}
+
+.one_font_style_class_h2 {
+    text-align: center;
+    height: 28px;
+    color: #555555;
+    font-family: "raleway";
+    font-size: 30px;
+    font-weight: 400;
+    line-height: 28px;
+    width: 100%;
+}
+
+.one_font_style_class_p {
+    display: block;
+    width: 40%;
+    height: 70px;
+    color: #8c8c8c;
+    font-family: 'montserrat';
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 28px;
+    text-align: center;
 }
 
 .conteiner {
@@ -234,6 +300,7 @@ header:hover:before {
 }
 
 .navigation_header #search_01 {
+    /* display: none;*/
     position: absolute;
     top: 70px;
     width: 1px;
@@ -364,10 +431,6 @@ header:hover:before {
     background-color: #C1A994;
 }
 
-main {
-    width: 1920px;
-}
-
 .main_box1 {
     width: 100%;
     height: 100%;
@@ -440,4 +503,392 @@ main {
 .main_box1 .box1-conteiner .wraper-items .wraper-items {
     margin: 10px;
     width: 300px;
+}
+
+.main_box1 .wraper_img {
+    overflow-x: hidden;
+    background-color: #fbfaf8;
+    height: 700px;
+    width: 1920px;
+    display: flex;
+    flex-direction: column;
+}
+
+.main_box1 .wraper_img .one_font_style_class_h2 {
+    margin: 30px 0 0 0;
+}
+
+.main_box1 .wraper_img .one_font_style_class_p {
+    margin: 20px auto 0 auto;
+}
+
+.main_box1 .wraper_img .img-items {
+    margin: 0 auto;
+    position: relative;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    padding-top: 30px;
+    min-height: 560px;
+    width: 1300px;
+}
+
+.main_box1 .wraper_img .img-items .cursor {
+    cursor: pointer;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_1 {
+    position: absolute;
+    display: block;
+    left: 10px;
+    top: 200px;
+    width: 770px;
+    height: 482px;
+    z-index: 2;
+    transition: 0.9s;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_2 {
+    position: absolute;
+    top: 120px;
+    right: 270px;
+    display: block;
+    width: 770px;
+    height: 482px;
+    z-index: 3;
+    transition: 0.9s;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_3 {
+    position: absolute;
+    top: 200px;
+    right: 10px;
+    display: block;
+    width: 770px;
+    height: 482px;
+    z-index: 1;
+    transition: 0.9s;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_1:hover {
+    z-index: 4;
+    transition: 0.5s;
+    transform: scale(1.2);
+    margin-top: -130px;
+    left: 100px;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_2:hover {
+    z-index: 4;
+    transition: 0.5s;
+    transform: scale(1.2);
+    margin-top: -45px;
+}
+
+.main_box1 .wraper_img .img-items .img-cheked_3:hover {
+    z-index: 4;
+    transition: 0.5s;
+    transform: scale(1.2);
+    margin-top: -130px;
+    right: 100px;
+}
+
+.aside_1 {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    min-height: 150px;
+    background-color: #f4f5f8;
+    background-image: linear-gradient(to right, #211b19 0%, #4e3427 100%);
+}
+
+.aside_1 .waxom_h2_span:hover .white_word_2 {
+    color: #fff;
+}
+
+.aside_1 .waxom_h2_span {
+    align-self: center;
+}
+
+.aside_1 .waxom_h2_span .white_word_2 {
+    width: 100%;
+    min-height: 18px;
+    color: #615855;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.aside_1 .waxom_h2_span h2 {
+    margin-bottom: 5px;
+    width: 100%;
+    min-height: 27px;
+    color: #ffffff;
+    font-family: Raleway;
+    font-size: 28px;
+    font-weight: 400;
+}
+
+.aside_1 .waxom_h2_span h2 span {
+    color: #c7b299;
+    margin-right: 5px;
+}
+
+.aside_1 .button_04 {
+    min-width: 170px;
+    outline: none;
+    border: none;
+    height: 53px;
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 5px;
+    background-color: #998675;
+    color: #ffffff;
+    font-family: "Raleway - Extra Bold";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 53px;
+    text-transform: uppercase;
+    text-align: center;
+    align-self: center;
+}
+
+.aside_1 .button_04:hover {
+    background-color: #C1A994;
+}
+
+.aside_1 .button_04:active {
+    background-color: #62564b;
+    box-shadow: 0 1px 1px 1px black;
+}
+
+.main_box2 {
+    min-height: 1300px;
+    background-color: #fff;
+    width: 1920px;
+}
+
+.main_box2 .one_font_style_class_h2 {
+    padding: 30px 0 0 0;
+}
+
+.main_box2 .one_font_style_class_p {
+    margin: 40px auto;
+    width: 800px;
+}
+
+.main_box2 .nav_2 {
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    width: 576px;
+    height: 24px;
+}
+
+.main_box2 .nav_2 li {
+    width: 203px;
+    height: 24px;
+    margin: 0 10px;
+}
+
+.main_box2 .nav_2 a {
+    display: block;
+    /* Style for "Web Design" */
+    color: #8c8c8c;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 30px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 3px;
+}
+
+.main_box2 .nav_2 a:hover {
+    /* Style for "button" */
+    text-align: center;
+    height: 32px;
+    border-radius: 3px;
+    background-color: #998675;
+    color: #fff;
+}
+
+.main_box2 .nav_2 a:active {
+    background-color: #BE780F;
+}
+
+.main_box2 .foto_conteyner {
+    margin: 40px auto;
+    padding: 10px 0;
+    display: flex;
+    flex-flow: wrap;
+    justify-content: space-around;
+    width: 1200px;
+    min-height: 800px;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover .description_img:before {
+    border: 20px solid transparent;
+    border-bottom: 20px solid #362f2d;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover .description_img h3 {
+    color: #fff;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover .description_img p {
+    color: #c7b299;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover .description_img {
+    background-color: #362f2d;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover .boom {
+    z-index: 3;
+}
+
+.main_box2 .foto_conteyner .flex_div_img:hover:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 65%;
+    z-index: 1;
+    background: rgba(72, 70, 66, 0.5);
+}
+
+.main_box2 .foto_conteyner .flex_div_img {
+    position: relative;
+    margin: 10px;
+    min-width: 200px;
+    min-height: 300px;
+    z-index: 1;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom {
+    position: absolute;
+    z-index: -1;
+    margin: 140px 0 0 125px;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .svg_boom:hover {
+    fill: gold;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .svg_boom:active {
+    fill: #fff;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .svg_boom {
+    z-index: 0;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .boom_link {
+    fill: #c7b299;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .boom_lupa {
+    fill: #fff;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .btn_svg_1 {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    outline: none;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .boom .btn_svg_2 {
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    outline: none;
+    margin: 0 0 0 25px;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .description_img {
+    margin-top: -5px;
+    height: 140px;
+    z-index: 2;
+    position: relative;
+    background-color: #fbfaf8;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .description_img h3 {
+    /* Style for "Claritas E" */
+    text-align: left;
+    display: block;
+    padding: 30px 0 10px 30px;
+    height: 15px;
+    color: #c7b299;
+    font-family: 'raleway';
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .description_img p {
+    /* Style for "Photograph" */
+    display: block;
+    text-align: left;
+    padding: 30px 0 0 30px;
+    height: 14px;
+    color: #d1d1d1;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 20px;
+}
+
+.main_box2 .foto_conteyner .flex_div_img .description_img:before {
+    display: block;
+    position: absolute;
+    z-index: 2;
+    top: -39px;
+    left: 20px;
+    content: '';
+    border: 20px solid transparent;
+    border-bottom: 20px solid #fbfaf8;
+}
+
+.main_box2 .btn_5 {
+    /* Style for "button" */
+    display: block;
+    margin: -30px auto 0 auto;
+    outline: none;
+    border: none;
+    width: 170px;
+    height: 53px;
+    box-shadow: inset 0 -3px 0 #736357;
+    border-radius: 5px;
+    background-color: #998675;
+    /* Style for "Get Starte" */
+    color: #ffffff;
+    font-family: "Raleway - Extra Bold";
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 53px;
+    text-transform: uppercase;
+    text-align: center;
+    align-self: center;
+}
+
+.main_box2 .btn_5:hover {
+    background-color: #C1A994;
+}
+
+.main_box2 .btn_5:active {
+    background-color: #62564b;
+    box-shadow: 0 1px 1px 1px black;
+}
+
+.svg_sprite {
+    display: none;
+}
+
+.svg {
+    fill: #555555;
+    display: block;
+    width: 100px;
+    height: 100px;
+}
+
+.svg:hover {
+    fill: #c7b299;
 }
